# sv443_jokeapi_wrapper

./: Cargo.toml  LICENSE  README.md
example/: basic.rs  handling-json.rs
src/: JokeAPIEnums.rs  lib.rs
