[package]
name = "sv443_jokeapi"
version = "0.1.1"
authors = ["Adam Kerik <dev.canarado@gmail.com>"]
edition = "2018"
description = "Simple package that makes interaction with the sv443 jokeapi in Rust a little easier."
repository = "https://github.com/canarado/sv443_jokeapi_wrapper"
exclude = [
    "/target",
    "**/*.rs.bk",
    "Cargo.lock",
    "/example"
]
license = "MIT"

[dependencies]
reqwest = "0.6.0"
serde_json = "1.0"