[package]
name = "sv443_jokeapi"
version = "0.2.0"
authors = ["Adam Kerik <dev.canarado@gmail.com>"]
edition = "2018"
description = "Simple package that makes interaction with the sv443 jokeapi in Rust a little easier."
repository = "https://github.com/canarado/sv443_jokeapi_wrapper"
exclude = [
    "/target",
    "**/*.rs.bk",
    "Cargo.lock",
    "/example"
]
license = "MIT"

[dependencies]
reqwest = "0.6.0"
serde_json = "1.0"
serde_yaml = "0.8.11"